--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Project Information
-pluginGroup=com.example
+pluginGroup=com.mars
 pluginVersion=1.0.0
-pluginDescription=A Hytale plugin template with best practices
+pluginDescription=Randomly teleports players to safe locations in the world
 
 # Gradle Configuration
 org.gradle.parallel=true
