name and versioning updated

--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,5 +1,5 @@
 {
-  "pluginName": "TemplatePlugin",
-  "version": "1.0.0",
+  "pluginName": "RandomTeleport",
+  "version": "1.0.2",
   "debugMode": false
 }
