--- a/build.gradle
+++ b/build.gradle
@@ -56,9 +56,14 @@ javadoc {
 
 // Adds the Hytale server as a build dependency, allowing you to reference and
 // compile against their code. This requires you to have Hytale installed using
-// the official launcher for now.
+// the official launcher for now. In CI, we use a local copy of the JAR.
 dependencies {
-    implementation(files("$hytaleHome/install/$patchline/package/game/latest/Server/HytaleServer.jar"))
+    if (isCI) {
+        // In CI environments, use a local copy of HytaleServer.jar in the libs folder
+        implementation(files("$projectDir/libs/HytaleServer.jar"))
+    } else {
+        implementation(files("$hytaleHome/install/$patchline/package/game/latest/Server/HytaleServer.jar"))
+    }
 }
 
 // Create the working directory to run the server if it does not already exist.
