--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # The current version of your project. Please use semantic versioning!
-version=1.1.0
+version=1.1.1
 
 # The group ID used for maven publishing. Usually the same as your package name
 # but not the same as your plugin group!
@@ -8,6 +8,9 @@ maven_group=com.vorlas
 # The version of Java used by your plugin. The game is built on Java 21 but
 # actually runs on Java 25.
 java_version=25
+
+# Hytale Version to build with. Testing is provided by the local install.
+hytale_version=2026.02.17-255364b8e
 
 # Determines if your plugin should also be loaded as an asset pack. If your
 # pack contains assets, or you intend to use the in-game asset editor, you
