--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
+      with:
+        lfs: true
     
     - name: Setup Java 25
       uses: actions/setup-java@v4
@@ -51,6 +53,8 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
+      with:
+        lfs: true
     
     - name: Setup Java 25
       uses: actions/setup-java@v4
